docs-archive/apache-airflow/2.4.0/_sources/_api/airflow/sensors/filesystem/index.rst.txt
:py:mod:`airflow.sensors.filesystem`
====================================

.. py:module:: airflow.sensors.filesystem


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.sensors.filesystem.FileSensor




.. py:class:: FileSensor(*, filepath, fs_conn_id='fs_default', recursive=False, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits for a file or folder to land in a filesystem.

   If the path given is a directory then this sensor will only return true if
   any files exist inside it (either directly, or within a subdirectory)

   :param fs_conn_id: reference to the File (path)
       connection id
   :param filepath: File or folder name (relative to
       the base path set within the connection), can be a glob.
   :param recursive: when set to ``True``, enables recursive directory matching behavior of
       ``**`` in glob filepath parameter. Defaults to ``False``.

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filepath']

      

   .. py:attribute:: ui_color
      :annotation: = #91818a

      

   .. py:method:: poke(context)

      Function that the sensors defined while deriving this class should
      override.



